syntax = "proto3";

option java_package = "com.useful.common.protobuf";
option java_outer_classname = "Message";
import "com/useful/common/protobuf/Command.proto";

message MessageBase {
    /**
     * 终端ID
     */
    string clientId = 1;
    /**
     * 命令类型
     */
    CommandType commandType = 2;
    /**
     * 数据
     */
    string data = 3;
}